Fixing small bug with notifier showing old IP when connection is lost

--- a/IPAlert/Resources/Resource.resx
+++ b/IPAlert/Resources/Resource.resx
@@ -135,4 +135,7 @@
   <data name="IPDisplay" xml:space="preserve">
     <value>IP: {0}</value>
   </data>
+  <data name="NoConnection" xml:space="preserve">
+    <value>No Connection</value>
+  </data>
 </root>
